--- a/groups/prometheus/module-ec2-instances/cloud-init/files/bootstrap-commands.yml
+++ b/groups/prometheus/module-ec2-instances/cloud-init/files/bootstrap-commands.yml
@@ -1,4 +1,4 @@
 runcmd:
   - hostnamectl set-hostname ${hostname}
-  - systemctl enable smartpan
-  - systemctl start smartpan
+  - systemctl enable prometheus
+  - systemctl start prometheus
