--- a/groups/prometheus/module-prometheus/cloud-init/files/bootstrap-commands.yml
+++ b/groups/prometheus/module-prometheus/cloud-init/files/bootstrap-commands.yml
@@ -1,4 +1,5 @@
 runcmd:
   - hostnamectl set-hostname ${hostname}
+  - sudo docker run -d --restart=always -p ${github_exporter_port}:${github_exporter_port} -e GITHUB_TOKEN="${github_exporter_token}" ${github_exporter_docker_image}:${github_exporter_docker_tag}
   - systemctl enable prometheus
   - systemctl start prometheus
